css/style.css
body {
    --pearl: #D4E7EE;
    --silver: #7f9295;
    --slate: #dcebf2;
    --pale: #668097;
    
    --ocean: #0b0c11;
    --ocean2: #1d1f2b;
    --ocean3: #36384b;
    height: 100vh;
}
html * {
   font-family: 'Roboto Mono', monospace;
}

/* header {
    background-color: var(--ocean);
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 35px;
    color: white;
    text-align: center;
    width: 100%;
    height: 61px;
    margin: 0px;
} */

/*
Navbar stuff
*/

.topnav .mobile-nav-icon {
    display: none;
    color: #f2f2f2;
    background-color: var(--ocean1);
    border: none;
    outline: 0;
}

.topnav .nav-button {
    text-decoration: none;
    margin-top: 0;
    /* margin-left: 2vw;
    margin-right: 2vw; */
    padding: 21.5px 2.5vw;
    font-size: 14px;
    color: ivory;
    align-items: center;
    letter-spacing: .5vh;
}

.nav-button:hover {
    background-color: var(--ocean3);
}

.topnav {
    /* height: 61px;
    width: calc(100vw - 1.5%);
    margin-left: 1.5%; */
    background-color: var(--ocean);
    overflow: hidden;
    flex: 1;
}

.topnav div {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav .topbar-text {
    font-size: 24px;
    letter-spacing: .75vw;
    padding: 12.5px 0;
}

.footer {
    background-color: var(--ocean);
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 15px;
    color: white;
    text-align: center;
    /* height: 50px; */
    margin: 0px;
    /* position: absolute; */
    bottom: 0;
    width: 100%;
    /* flex: none; */
    flex: 1;
}

.footer-text{
    position: block;
    font-size: 12.5px;
    letter-spacing: .2vw;
    padding: 16px 0px;
}

.flex-container {
    display: flex;
    min-height: 100%;
    flex-direction: column;
}

.page-wrap {
    /* display: flex; */
    flex: 10;
    /* width: 100%; */
    /* height: 100%; */
    /* align-items: stretch; */
    /* justify-content: flex-start; */
    /* background: var(--ocean3); */
}

.instruct-wrap {
    /* position: absolute; */
    /* display: flex; */
    min-height: 100%;
    background: var(--ocean2);
    flex: 1;
    align-items: center;
    overflow-x: hidden;
}

.input-wrap {
    /* position: absolute; */
    /* display: flex; */
    /* margin-left: 25%; */
    min-height: 100%;
    background: var(--ocean3);
    flex: 3;
    background-image: url("../assets/wizardhat.png");
    background-repeat: no-repeat, repeat;
    background-position: center; 
    background-size: 50vw cover; 
    /* justify-content: center; */
    overflow-x: hidden;
}

.input-wrap2 {
    display: inline-block;
    position: relative;
    /* width: 45%; */
    color: ivory;
}

.instructions {
    margin-top: 0px;
    /* margin-left: 1vw; */
    margin-right: 1vw;
    display: block;
    line-height: 1;
    width: 100%;
}
.step-box {
    display: inline-block;
    line-height: 1;
    align-content: center;
    align-items: center;
    color: var(--pearl);
}
.header {
    font-size: 15px;
    margin-top: 4vh;
    margin-left: 1vw;
    margin-bottom: 1vh;
    text-decoration: underline;
}
.sub-text {
    font-size: 18px;
    margin-bottom: 1.5vh;
    margin-right: 2vw;
    line-height: 1.25em;
    margin-left: 1vw;
}
#link {
    font-size: 18px;
    color: rgb(199, 173, 107);
    margin-bottom: 1.5vh;
    margin-right: 2vw;
    line-height: 1.25em;
    letter-spacing: .5vh;
    font-style: italic;
}
#curr-GPA {
    margin-right: 2vw;
}
.about-section {
    margin-top: 2.5vh;
    margin-right: 2vw;
    border-color: var(--pearl);
}
.about-header {
    font-size: 17px;
    font-style: italic;
    margin-bottom: 1vh;
    margin-right: 2vw;
    line-height: 1.25em;
    margin-left: 2.5vw;
    color: var(--pearl);
}
.about-text {
    font-size: 15px;
    margin-bottom: 3.5vh;
    margin-right: 2vw;
    line-height: 1.25em;
    margin-left: 1vw;
    color: var(--pearl);
}

.disclaimer-header {
    font-size: 12.5px;
    font-style: italic;
    margin-right: 2vw;
    line-height: 1.25em;
    margin-left: 1vw;
    margin-bottom: 1vh;
    color: var(--pearl);
    letter-spacing: .35vw;
    text-decoration: underline;
}

.disclaimer-text {
    font-size: 10px;
    margin-bottom: 1.5vh;
    margin-right: 2vw;
    line-height: 1.25em;
    margin-left: 1vw;
    color: var(--pearl);
}

.select-btn {
    background: rgb(199, 173, 107, .8);
    width: 10vw;
    margin-top: 2.5vh;
    border: 2px solid;
    border-color: ivory;
}

.input-form {
    background: rgb(199, 173, 107, .8);
    width: 15vw;
    margin-top: 2.5vh;
    border: 2px solid rounded;
    border-color: ivory;
    border-radius: 3px;
    padding: 0px 2px ;
    height: 30px;
}
.input-form2 {
    background: rgb(199, 173, 107, .8);
    width: 7.5vw;
    margin-top: 2.5vh;
    border: 2px solid rounded;
    border-color: ivory;
    border-radius: 3px;
    padding: 0px 2px;
    height: 30px;
}

/* #th {
    display: none;
} */
.grade-form {
    background: rgb(199, 173, 107, .8);
    width: 9.5vw;
    margin-top: 2.5vh;
    border: 2px solid rounded;
    border-color: ivory;
    border-radius: 3px;
    display: none;
}
.grade-form2 {
    background: rgb(199, 173, 107, .8);
    width: 4.5vw;
    margin-top: 2.5vh;
    border: 2px solid rounded;
    border-color: ivory;
    border-radius: 3px;
    display: none;
}

/* input {
    padding: 3.5px;
} */
.input-box {
    display: block;
    line-height: 1;
    width: calc(100% - 2.5vw);
    height: 100%;
    color: ivory;
    margin-left: 2%;
}
::placeholder {
    color: black;
}
label {
    margin-top: 5vh;
}

table {
    margin-top: 3vh;
}
.th-class {
    font-size: 1em;
    text-decoration: underline;
}
td {
    width: 25vw;
}
.input-button {
    -webkit-appearance: none;
    border: 1px solid #cacece;
    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
    padding: 9px;
    border-radius: 3px;
    position: relative;
    border-color: rgb(199, 173, 107, .8);
    background: var(--ocean2);
    margin-top: 2.75vh;
    width: 25px;
    height: 25px;
    margin-left: 1.75vw;
    outline: 0;
}
.input-button:active, .input-button:checked:active {
  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
}
.input-button:checked:after {
    content: '\2714';
    padding-top: 3px;
    font-size: 18px;
    position: absolute;
    top: 0px;
    left: 3px;
    color: ivory;
}
.rows {
    display: inline-block;
    width:100%;
    background-color: black;
}
.course-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 15vw;
    margin-right: 1vw;
}
.grade-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 15vw;
    margin-right: 1vw;
}
.credits-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 15vw;
}
.retake-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 6vw;
}
.oldGrade-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 12vw;
}
.passFail-colm {
    /* display: flex;
    flex-direction: column; */
    display: block;
    width: 6vw;
}
button {
    margin-left: 0;
}
.output-box-view {
    font-size: 1em;
    color: var(--pearl);
    margin-top: 3vh;
    background-color: #131831;
    border: 1px solid;
    border-color: ivory;
    width: 92%;
    display: block;
}
#out {
    padding: 2.5vh 0vh;
}
#submit-btn {
    margin-top: 5vh;
    margin-left: 12.5vw;
}
#addRow-btn {
    margin-right: 0vw;
    margin-top: 5vh;

}

#classGradeCalc-container {
    display: none;
}

/* @media (max-width: 1050px) and (min-width: 800px) {

    .topbar-text {
        font-size: 70%;
    }

    .instruct-wrap {
        position: relative;
        width: 100vw;
        height: auto;
    }
    
    .input-wrap {
         position: relative;
         margin-left: 0;
         margin-top: 0;
         width: 100vw;
         height: auto;
    }

    .about-text {
        margin-bottom: 0;
    }

} */
  
/* @media (max-width: 800px) and (min-width: 550px){

    .topbar-text {
        font-size: 70%;
    } 

    .instruct-wrap {
        position: relative;
        width: 100vw;
        height: auto;
    }
    
    .input-wrap {
         position: relative;
         margin-left: 0;
         margin-top: 0;
         width: 100vw;
         height: auto;
    }

    .about-text {
        margin-bottom: 0;
    }
} */
  
/* @media (max-width: 550px) {

    .topbar-text {
        font-size: 60%;
    }
    .instruct-wrap {
        position: relative;
        width: 100vw;
        height: auto;
    }
    
    .input-wrap {
         position: relative;
         margin-left: 0;
         margin-top: 0;
         width: 100vw;
         height: auto;
    }

    .about-text {
        margin-bottom: 0;
    }
} */

/*change the layout of the navigation bar for all the screens 
that have a width less or equal than 500px*/

@media screen and (max-width: 800px) {
    /*shows elements in a column*/
    .topnav div:not(:first-child) {
        display: none;
    }
    .topnav .mobile-nav-icon {
        float: right;
        display: block;
        height: 8vh;
    }
    
}

@media screen and (max-width: 800px) {
   
   .topnav.responsive {
       position: relative;
   }
   .topnav.responsive .mobile-nav-icon {
       position: absolute;
       right: 0;
       top: 0;
   }

   .topnav.responsive .nav-item {
       float: none;
       display: block;
       text-align: left;
   }
}

@media screen and (min-width: 700px) {
    .page-wrap {
        display: flex;
        flex: 10;
    }
}

